pruned the env a bit

--- a/dataset_testing/python_envs/environment.yaml
+++ b/dataset_testing/python_envs/environment.yaml
@@ -5,7 +5,6 @@ dependencies:
 - aiohttp
 - cartopy
 - cdsapi
-- cfgrib
 - cfunits
 - cf-xarray
 - cmocean
@@ -13,16 +12,11 @@ dependencies:
 - dask
 - dask-jobqueue
 - distributed
-- eccodes>=2.34.0
-- ecflow
-- ecmwf-api-client
 - fastparquet
-- gcm_filters
 - hdf5plugin
-- healpy
+- healpix
 - hvplot
 - intake==0.7.0
-- intake-esm
 - intake-xarray
 - ipykernel
 - iris
@@ -31,27 +25,21 @@ dependencies:
 - jupytext
 - libnetcdf>=4.9.2
 - matplotlib
-- nco
 - netcdf4
 - numba
 - numpy
-- ocl-icd-system
 - odc-stac
 - opencv
 - pandas
 - pystac
-- python-eccodes
-- pytorch
 - requests
 - rioxarray
 - ruff
-- scikit-learn
 - scipy
 - seaborn
 - sh
 - spectrum
 - tokenizers
-- torchvision
 - tqdm
 - types-pyyaml
 - uxarray
