add ci test with / for python env

--- a/python_envs/environment.yaml
+++ b/python_envs/environment.yaml
@@ -7,7 +7,6 @@ dependencies:
 - cdsapi
 - cfunits
 - cmocean
-- cudatoolkit
 - dask
 - dask-jobqueue
 - distributed
@@ -33,6 +32,7 @@ dependencies:
 - opencv
 - pandas
 - pystac
+- pytest
 - requests
 - rioxarray
 - ruff
