next try at getting conda out of the lists.

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -36,6 +36,8 @@ jobs:
         use-mamba: true
         miniforge-version: latest
         channels: conda-forge
+        channel-priority: strict
+        conda-remove-defaults: "true"
     - name: restore conda environment from cache
       uses: actions/cache/restore@v4
       with:
