transform tool for 2d NICAM files

--- a/python_envs/environment.yaml
+++ b/python_envs/environment.yaml
@@ -13,6 +13,7 @@ dependencies:
 - easygems
 - fastparquet
 - flox
+- h5netcdf
 - hdf5plugin
 - healpix
 - hvplot
@@ -23,6 +24,7 @@ dependencies:
 - jupyter
 - jupyterlab
 - jupytext
+- kerchunk
 - libnetcdf>=4.9.2
 - matplotlib
 - netcdf4
@@ -31,6 +33,7 @@ dependencies:
 - odc-stac
 - opencv
 - pandas
+- pre-commit
 - pystac
 - pytest
 - requests
@@ -44,6 +47,7 @@ dependencies:
 - tokenizers
 - tqdm
 - types-pyyaml
+- virtualizarr
 - uxarray
 - xarray
 - xgcm
