--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -25,7 +25,6 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-
     steps:
     - uses: actions/checkout@v4
     - name: initialize conda
@@ -48,11 +47,10 @@ jobs:
     - name: install conda environment
       run:
         mamba env update -n easy -f python_envs/environment.yaml
-      if: steps.conda_cache.outputs.cache-hit != 'true'
       id: install_conda_env
     - name: upload conda environment to cache
       uses: actions/cache/save@v4
-      if: steps.install_conda_env.outcome == 'success'
+      if: (steps.install_conda_env.outcome == 'success')
       with:
         path: ${{ env.CONDA }}/envs
         key:
