--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -27,6 +27,12 @@ jobs:
         shell: bash -l {0}
     steps:
     - uses: actions/checkout@v4
+    - name: Set current date as env variable
+      run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+    - name: compute cache hash
+      env:   
+        HASH_BASE: conda-${{ runner.os }}--${{ runner.arch }}--${{ hashFiles('python_envs/environment.yaml', '.github/workflows/run_tests.yaml') }}-${{ env.CONDA_CACHE_NUMBER }}-{{ env.NOW }}
+      run: echo "HASH=${HASH_BASE}-${NOW}"  >> $GITHUB_ENV
     - name: initialize conda
       uses: conda-incubator/setup-miniconda@v3
       with:
@@ -42,7 +48,7 @@ jobs:
       with:
         path: ${{ env.CONDA }}/envs
         key:
-          conda-${{ runner.os }}--${{ runner.arch }}--${{ hashFiles('python_envs/environment.yaml', '.github/workflows/run_tests.yaml') }}-${{ env.CONDA_CACHE_NUMBER }}
+          {{ env.HASH }}
       id: conda_cache
     - name: install conda environment
       run:
@@ -54,7 +60,7 @@ jobs:
       with:
         path: ${{ env.CONDA }}/envs
         key:
-          conda-${{ runner.os }}--${{ runner.arch }}--${{ hashFiles('python_envs/environment.yaml', '.github/workflows/run_tests.yaml') }}-${{ env.CONDA_CACHE_NUMBER }}
+          ${{ env.HASH }}
     - name: run tests
       run: |
         conda info
