--- a/dataset_transforms/nicam_to_zarr.yaml
+++ b/dataset_transforms/nicam_to_zarr.yaml
@@ -41,23 +41,9 @@
     lev: 0
   
   
-3dz6h:
+3d6h:
   chunks: 
-    time: 1
+    time: 4
+    lev: 5
   renames:
     cells: cell
-    ms_dh: ms_dh
-    ms_lwhr: ms_lwhr
-    ms_pres: ms_pres
-    ms_qc: clw
-    ms_qg: qg
-    ms_qi: cli
-    ms_qr: qr
-    ms_qs: qs
-    ms_qv: hus
-    ms_rh: hur
-    ms_swhr: ms_swhr
-    ms_tem: ta
-    ms_u: ua
-    ms_v: va
-    ms_w: wa
