enable remapping of ICON 3D and 2D fields.
still only coarse resolution tested.

--- a/dataset_transforms/icon_to_zarr.yaml
+++ b/dataset_transforms/icon_to_zarr.yaml
@@ -10,3 +10,13 @@
   drop:
     - clon_bnds
     - clat_bnds
+
+3d:
+  chunks:
+    time : 4  # can't be bigger than count of time steps in a file.
+  renames:
+    clon: lon
+    clat: lat
+  drop:
+    - clon_bnds
+    - clat_bnds
