--- a/python_envs/environment.yaml
+++ b/python_envs/environment.yaml
@@ -1,7 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- python==3.12
+- python==3.12.*
 - aiohttp
 - cartopy
 - cdsapi
@@ -46,7 +46,7 @@ dependencies:
 - tqdm
 - types-pyyaml
 - uxarray
-- xarray
+- xarray>=2025.1.2
 - xgcm
 - zarr<3.0.0
 - pip
