--- a/proxy/CN/Caddyfile
+++ b/proxy/CN/Caddyfile
@@ -1,8 +1,25 @@
 {
 	order cache before reverse_proxy
+	log {
+		output file /data2/share/florain/caddy.log # Log output to a specific file
+		level info # Set the log level (debug, info, warn, error)
+	}
 }
 
-http://server04:2081 {
+(badger_common) {
+	ValueLogFileSize 1073741824 # 1 GB in bytes
+	SyncWrites true # Enable synchronous writes
+	ttl 2d
+}
+
+(cache_common) {
+	timeout {
+		backend 120s
+		cache 15s
+	}
+}
+
+http://server03:2081 {
 	@cache_a path /catalog/*
 	handle @cache_a {
 		reverse_proxy https://digital-earths-global-hackathon.github.io:443 {
@@ -12,8 +29,11 @@ http://server04:2081 {
 		cache {
 			badger {
 				path /data2/share/florain/badger/catalog
+				configuration {
+					import badger_common
+				}
 			}
-			ttl 2d
+			import cache_common
 		}
 	}
 
@@ -32,8 +52,16 @@ http://server04:2081 {
 		cache {
 			badger {
 				path /data2/share/florain/badger/jasmin
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
 			}
 			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
 		}
 	}
 	@cache_dkrz-minio path /dkrz-minio/*
@@ -51,8 +79,16 @@ http://server04:2081 {
 		cache {
 			badger {
 				path /data2/share/florain/badger/dkrz-minio
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
 			}
 			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
 		}
 	}
 	@cache_dkrz-swift path /dkrz-swift/*
@@ -70,8 +106,16 @@ http://server04:2081 {
 		cache {
 			badger {
 				path /data2/share/florain/badger/dkrz-swift
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
 			}
 			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
 		}
 	}
 	@cache_nowake path /nowake/*
@@ -89,6 +133,151 @@ http://server04:2081 {
 		cache {
 			badger {
 				path /data2/share/florain/badger/nowake
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
+		}
+	}
+
+	# Default handler for other requests
+	handle {
+		respond "404 Not Found" 404
+	}
+}
+http://10.2.202.3:2081 {
+	@cache_a path /catalog/*
+	handle @cache_a {
+		reverse_proxy https://digital-earths-global-hackathon.github.io:443 {
+			header_up Host {upstream_hostport}
+		}
+		header Cache-Control "public, max-age=3600"
+		cache {
+			badger {
+				path /data2/share/florain/badger/catalog2
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
+		}
+	}
+
+	@cache_jasmin path /jasmin/*
+	handle @cache_jasmin {
+		uri strip_prefix /jasmin
+		#        uri replace ^ /
+		reverse_proxy https://hackathon-o.s3-ext.jc.rl.ac.uk:443 {
+			header_up Host {upstream_hostport}
+			transport http {
+				response_header_timeout 30s
+				read_timeout 60s
+			}
+		}
+		header Cache-Control "public, max-age=3600"
+		cache {
+			badger {
+				path /data2/share/florain/badger/jasmin2
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
+		}
+	}
+	@cache_dkrz-minio path /dkrz-minio/*
+	handle @cache_dkrz-minio {
+		uri strip_prefix /dkrz-minio
+		#        uri replace ^ /
+		reverse_proxy https://s3.eu-dkrz-1.dkrz.cloud:443 {
+			header_up Host {upstream_hostport}
+			transport http {
+				response_header_timeout 30s
+				read_timeout 60s
+			}
+		}
+		header Cache-Control "public, max-age=3600"
+		cache {
+			badger {
+				path /data2/share/florain/badger/dkrz-minio2
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
+		}
+	}
+	@cache_dkrz-swift path /dkrz-swift/*
+	handle @cache_dkrz-swift {
+		uri strip_prefix /dkrz-swift
+		#        uri replace ^ /
+		reverse_proxy https://swift.dkrz.de:443 {
+			header_up Host {upstream_hostport}
+			transport http {
+				response_header_timeout 30s
+				read_timeout 60s
+			}
+		}
+		header Cache-Control "public, max-age=3600"
+		cache {
+			badger {
+				path /data2/share/florain/badger/dkrz-swift2
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			ttl 2d
+			timeout {
+				backend 120s
+				cache 15s
+			}
+		}
+	}
+	@cache_nowake path /nowake/*
+	handle @cache_nowake {
+		uri strip_prefix /nowake
+		#        uri replace ^ /
+		reverse_proxy https://nowake.nicam.jp:443 {
+			header_up Host {upstream_hostport}
+			transport http {
+				response_header_timeout 30s
+				read_timeout 60s
+			}
+		}
+		header Cache-Control "public, max-age=3600"
+		cache {
+			badger {
+				path /data2/share/florain/badger/nowake2
+				configuration {
+					ValueLogFileSize 1073741824 # 1 GB in bytes
+					SyncWrites true # Enable synchronous writes
+				}
+			}
+			timeout {
+				backend 120s
+				cache 15s
 			}
 			ttl 2d
 		}
